--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,22 +1,24 @@
 <div class="surface-0 flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
     <div class="" style="min-width:80%">
         <div class="col-12 mt-5 xl:mt-0 text-center">
-            <!-- <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="Sakai logo" class="mb-5" style="width:81px; height:60px;">                 -->
+            <img src="./../../../assets/images/logo.png" alt="Sakai logo" class="mb-5" style="width:81px; height:60px;">                
         </div>
         <form [formGroup]="loginForm" (ngSubmit)="login()"class="col-12 xl:col-6" style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
             <div class="h-full w-full m-0 py-7 px-4" style="border-radius:53px; background: linear-gradient(180deg, var(--surface-50) 38.9%, var(--surface-0));">
                 <div class="text-center mb-5">
-                    <img src="assets/demo/images/login/avatar.png" alt="Image" height="50" class="mb-3">
-                    <div class="text-900 text-3xl font-medium mb-3">Welcome, Isabel!</div>
+                    <img src="./../../../assets/images/football.jpg" alt="Image" height="50" class="mb-3">
+                    <div class="text-900 text-3xl font-medium mb-3">Welcome, User!</div>
                     <span class="text-600 font-medium">Sign in to continue</span>
                 </div>
 
                 <div class="w-full md:w-10 mx-auto">
                     <label class="block text-900 text-xl font-medium mb-2">Email</label>
                     <input formControlName="email" type="text" name="email" placeholder="Email address" pInputText class="w-full mb-3" style="padding:1rem;">
+                    <p-message *ngIf="email && email.invalid && email.touched" severity="warn" text="email required!" styleClass="mr-2"></p-message>  
 
                     <label  class="block text-900 text-xl font-medium mb-2">Password</label>
                     <input formControlName="password" type="password" name="password" placeholder="password" pInputText class="w-full mb-3" style="padding:1rem;">
+                    <p-message *ngIf="password && password.invalid && password.touched" severity="warn" text="Password required!" styleClass="mr-2"></p-message>  
 
                     <div class="flex align-items-center justify-content-between mb-5">
                         <div class="flex align-items-center">
@@ -30,7 +32,8 @@
                 <div><a  [routerLink]="['/register']" class=" font-medium no-underline ml-2 text-right cursor-pointer" style="color: var(--primary-color)">create account?</a>
                 </div>
                 </div>
-
+                
+              
             </div>
         </form>
     </div>
