--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Orders</span>
+                    <span class="block text-500 font-medium mb-3">championnat</span>
                     <div class="text-900 font-medium text-xl">152</div>
                 </div>
                 <div
