--- a/frontend/src/app/layout/app.topbar.component.html
+++ b/frontend/src/app/layout/app.topbar.component.html
@@ -1,7 +1,7 @@
 <div class="layout-topbar">
     <a class="layout-topbar-logo" routerLink="">
         <!-- <img src="" alt="logo"> -->
-        <span>Nawwar</span>
+        <span>Kawar.tn</span>
     </a>
 
     <button
