fix error s centre

--- a/frontend/src/app/components/contenu/centres/centres.component.html
+++ b/frontend/src/app/components/contenu/centres/centres.component.html
@@ -146,14 +146,14 @@
                                     pRipple
                                     icon="pi pi-pencil"
                                     class="p-button-rounded p-button-success mr-2"
-                                    (click)="updateChampDialog(centre)"
+                                    (click)="updateChampDialog(centres)"
                                 ></button>
                                 <button
                                     pButton
                                     pRipple
                                     icon="pi pi-trash"
                                     class="p-button-rounded p-button-warning"
-                                    (click)="deleteChamp(centre)"
+                                    (click)="deleteChamp(centres)"
                                 ></button>
                             </div>
                         </td>
